Closed Bug 952616 Opened 11 years ago Closed 11 years ago

OdinMonkey: tweak success message when not stored in cache

Categories

(Core :: JavaScript Engine: JIT, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla29

People

(Reporter: luke, Assigned: luke)

Details

Attachments

(1 file)

This patch tweaks the asm.js success message to say "not stored in the cache" when the compiled module is not stored in the cache.
Attachment #8350747 - Flags: review?(benj)
Comment on attachment 8350747 [details] [diff] [review]
tweak-caching-message

Review of attachment 8350747 [details] [diff] [review]:
-----------------------------------------------------------------

::: js/src/jit/AsmJS.cpp
@@ +1709,5 @@
>              }
>          }
>          out->reset(JS_smprintf("total compilation time %dms%s%s",
>                                 msTotal,
> +                               storedInCache ? "; stored in cache" : "; not stored in cache",

You could even factorize the "; " in the first argument ("total compilation time %dms; %s%s") and thus reduce the size of these strings, but that nitpicking seems to be only worth 2 bytes :)
Attachment #8350747 - Flags: review?(benj) → review+
https://hg.mozilla.org/mozilla-central/rev/32724614e323
Status: NEW → RESOLVED
Closed: 11 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla29
Oops, I hoisted the semicolon into the wrong place:
https://hg.mozilla.org/integration/mozilla-inbound/rev/1cf7c629cfcd
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: