Bug 952616 - OdinMonkey: tweak success message when not stored in cache (r=bbouvier)